--- a/chemistry/Base.lproj/Main.storyboard
+++ b/chemistry/Base.lproj/Main.storyboard
@@ -67,9 +67,8 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XgQ-Sd-J7V">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="210"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e53-u6-d8Q">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Colori" translatesAutoresizingMaskIntoConstraints="NO" id="e53-u6-d8Q">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                                <color key="backgroundColor" red="1" green="0.084040851149999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="YWV-gS-3PT"/>
                                                     <constraint firstAttribute="width" constant="30" id="cX2-fU-r3D"/>
@@ -759,6 +758,7 @@
                     <connections>
                         <outlet property="collectionView" destination="bc4-xM-c01" id="dHH-hx-d2r"/>
                         <outlet property="heightCollectionView" destination="w87-Yo-f3k" id="Axg-LW-6AT"/>
+                        <outlet property="tableStackView" destination="78T-uj-sVF" id="uDK-bD-agz"/>
                         <outlet property="widthCollectionView" destination="ce9-jb-jFg" id="xaP-dO-5jD"/>
                     </connections>
                 </viewController>
@@ -768,6 +768,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Colori" width="1500" height="1024"/>
         <image name="back" width="256" height="256"/>
     </resources>
 </document>
