--- a/chemistry/Base.lproj/Main.storyboard
+++ b/chemistry/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XgQ-Sd-J7V">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="210"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Colori" translatesAutoresizingMaskIntoConstraints="NO" id="e53-u6-d8Q">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Helium" translatesAutoresizingMaskIntoConstraints="NO" id="e53-u6-d8Q">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="YWV-gS-3PT"/>
@@ -768,7 +768,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Colori" width="1500" height="1024"/>
+        <image name="Helium" width="350" height="345"/>
         <image name="back" width="256" height="256"/>
     </resources>
 </document>
