--- a/chemistry/Base.lproj/Main.storyboard
+++ b/chemistry/Base.lproj/Main.storyboard
@@ -1156,6 +1156,6 @@
         <image name="back" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JOH-4K-FfF"/>
+        <segue reference="Fqw-3t-HtB"/>
     </inferredMetricsTieBreakers>
 </document>
