--- a/chemistry/Lab/Lab.storyboard
+++ b/chemistry/Lab/Lab.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Lab View Controller-->
         <scene sceneID="ZXA-4R-lPR">
             <objects>
-                <viewController id="WbL-oL-VQG" sceneMemberID="viewController">
+                <viewController id="WbL-oL-VQG" customClass="LabViewController" customModule="chemistry" customModuleProvider="target" sceneMemberID="viewController">
                     <skView key="view" contentMode="scaleToFill" sceneName="Lab.sks" id="JgZ-i0-coY">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
