--- a/chemistry/Base.lproj/Main.storyboard
+++ b/chemistry/Base.lproj/Main.storyboard
@@ -1626,6 +1626,6 @@
         <image name="Number 9" width="1176" height="1180"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JOH-4K-FfF"/>
+        <segue reference="Fqw-3t-HtB"/>
     </inferredMetricsTieBreakers>
 </document>
